<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5fafd"
    tools:context=".cyberbullying.CyberBullyingActivity"
    >
    <soup.neumorphism.NeumorphImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingHorizontal="20dp"
        android:src="@drawable/cyberbullying"
        android:id="@+id/topBannerImageView"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBannerImageView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                >
                <com.mursaat.extendedtextview.AnimatedGradientTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:colors="@array/funny_colors"
                    app:simultaneousColors="4"
                    app:angle="45"
                    app:speed="1000"
                    app:maxFPS="30"
                    android:text="@string/questions_1"
                    android:gravity="start"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:id="@+id/questions1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_1"
                    android:layout_below="@id/questions1"
                    android:id="@+id/answer1"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    />
                <com.mursaat.extendedtextview.AnimatedGradientTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:colors="@array/funny_colors"
                    app:simultaneousColors="4"
                    app:angle="45"
                    app:speed="1000"
                    app:maxFPS="30"
                    android:text="@string/questions_2"
                    android:gravity="start"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:id="@+id/questions2"
                    android:layout_below="@id/answer1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_2"
                    android:layout_below="@id/questions2"
                    android:id="@+id/answer2"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    />
                <com.mursaat.extendedtextview.AnimatedGradientTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:colors="@array/funny_colors"
                    app:simultaneousColors="4"
                    app:angle="45"
                    app:speed="1000"
                    app:maxFPS="30"
                    android:gravity="start"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:id="@+id/questions3"
                    android:text="@string/questions_3"
                    android:layout_below="@id/answer2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/answer_3"
                    android:id="@+id/answer3"
                    android:layout_below="@id/questions3"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/imageView1"
                    android:src="@drawable/cyberbullingdamage"
                    android:layout_below="@+id/answer3"
                    android:scaleType="fitXY"
                    android:layout_marginTop="15dp"
                    />
                <com.mursaat.extendedtextview.AnimatedGradientTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:colors="@array/funny_colors"
                    app:simultaneousColors="4"
                    app:angle="45"
                    app:speed="1000"
                    app:maxFPS="30"
                    android:gravity="start"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:id="@+id/questions4"
                    android:text="@string/questions_4"
                    android:layout_below="@id/imageView1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/answer_4"
                    android:id="@+id/answer4"
                    android:layout_below="@id/questions4"
                    />
                <com.mursaat.extendedtextview.AnimatedGradientTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:colors="@array/funny_colors"
                    app:simultaneousColors="4"
                    app:angle="45"
                    app:speed="1000"
                    app:maxFPS="30"
                    android:gravity="start"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:id="@+id/questions5"
                    android:text="@string/questions_5"
                    android:layout_below="@id/answer4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/answer_5"
                    android:id="@+id/answer5"
                    android:layout_below="@id/questions5"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/cyberbullingsasti"
                    android:layout_below="@+id/answer5"
                    android:scaleType="fitXY"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:text="@string/conslusion"
                    android:id="@+id/answer6"
                    android:layout_below="@id/imageView2"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>